Blog, Notepad, and About pages

--- a/facet/template/base.html
+++ b/facet/template/base.html
@@ -7,11 +7,11 @@
 
 <body>
 <div class=wrap>
-<div class=logo><img src="/static/img/logo.png" /></div>
+<div class=logo><a href="/"><img src="/static/img/logo.png" /></a></div>
 <p class=nav> 
-    <a href="/">Blog</a>
-	<a href="/NotePad/">NotePad</a>
-    <a href="/About/">About</a></a> 
+    <a href="/blog">Blog</a>
+	<a href="/notepad/">NotePad</a>
+    <a href="/about/">About</a></a> 
   
   
     <blockquote>
